--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 								<label for="exampleTextarea">Message</label>
 								<textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
 							</fieldset>
-							<button type="submit" class="btn btn-default">Submit</button>
+							<button id="submit-button" type="submit" class="btn btn-default">Submit</button>
 						</form>
 					</section>
 				</div>
