--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 					<aside id="aside">
 						<!-- Connect Heading -->
 						<h2>Connect with Me</h2>
-						<div class="row">
+						<div id="icon-row-cont" class="row">
 							<div class="col-xs-4">
 								<a href="#"><img id="github-logo" class="img-fluid imgSize" src="assets/images/GitHub-Logo.png" alt="GitHub Logo"></a>
 							</div>
