--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 				</ul>
 			</div>
 		</nav>
-
 		<div class="container-fluid">
 			<div class="row">
 				<!-- About Me -->
@@ -59,7 +58,7 @@
 					<aside id="aside">
 						<!-- Connect Heading -->
 						<h2>Connect with Me</h2>
-						<div class="row">
+						<div id="icon-row-index" class="row">
 							<div class="col-xs-4">
 								<a href="#"><img id="github-logo" class="img-fluid imgSize" src="assets/images/GitHub-Logo.png" alt="GitHub Logo"></a>
 							</div>
@@ -72,6 +71,7 @@
 						</div>
 					</aside>
 				</div>
+				
 			</div>
 			<!-- Footer -->
 			<div class="row">
