social media edits

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,13 +86,13 @@
 						<h2>Connect with Me</h2>
 						<div id="icon-row-port" class="row">
 							<div class="col-xs-4">
-								<a href="#"><img id="github-logo" class="img-fluid imgSize" src="assets/images/GitHub-Logo.png" alt="GitHub Logo"></a>
+								<a href="https://github.com/masonjterry" target="_blank"><img id="github-logo" class="img-fluid imgSize" src="assets/images/GitHub-Logo.png" alt="GitHub Logo"></a>
 							</div>
 							<div class="col-xs-4">
-								<a href="#"><img id="linkedin-logo" class="img-fluid imgSize" src="assets/images/LinkedIn-Logo.png" alt="LinkedIn Logo"></a>
+								<a href="https://www.linkedin.com/in/masonterry/" target="_blank"><img id="linkedin-logo" class="img-fluid imgSize" src="assets/images/LinkedIn-Logo.png" alt="LinkedIn Logo"></a>
 							</div>
 							<div class="col-xs-4">
-								<a href="#"><img id="stackoverflow-logo" class="img-fluid imgSize" src="assets/images/StackOverflow-Logo.png" alt="StackOverflow Logo"></a>
+								<a href="https://stackoverflow.com/users/8839924/mason-terry" target="_blank"><img id="stackoverflow-logo" class="img-fluid imgSize" src="assets/images/StackOverflow-Logo.png" alt="StackOverflow Logo"></a>
 							</div>
 						</div>
 					</aside>
