--- a/portfolio.html
+++ b/portfolio.html
@@ -21,13 +21,13 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="index.html">About</a>
+						<a class="nav-link nav-btn" href="index.html">About</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="portfolio.html">Portfolio</a>
+						<a class="nav-link nav-btn" href="portfolio.html">Portfolio</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="contact.html">Contact</a>
+						<a class="nav-link nav-btn" href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -45,13 +45,13 @@
 							<div class="col-md-6 col-xs-12">
 								<div class="work">
 									<img class="img-fluid" id="hangman" src="assets/images/laptop.jpeg" alt="hangman">
-									<h3>Hangman</h3>
+									<a class="port-btn" href="#"><h3>Hangman</h3></a>
 								</div>
 							</div>
 							<div class="col-md-6 col-xs-12">
 								<div class="work">
 									<img class="img-fluid" id="rpg-game" src="assets/images/computer-desk.jpeg" alt="RPG Game">
-									<h3>RPG Game</h3>
+									<a href="#"><h3>RPG Game</h3></a>
 								</div>
 							</div>
 						</div>
@@ -59,13 +59,13 @@
 							<div class="col-md-6 col-xs-12">
 								<div class="work">
 									<img class="img-fluid" id="trivia-game" src="assets/images/create.jpeg" alt="Trivia Game">
-									<h3>Trivia Game</h3>
+									<a href="#"><h3>Trivia Game</h3></a>
 								</div>
 							</div>
 							<div class="col-md-6 col-xs-12">
 								<div class="work">
 									<img class="img-fluid" id="rutgers" src="assets/images/desktop.png" alt="Rutgers Info Widget">
-									<h3>Rutgers Info Widget</h3>
+									<a href="#"><h3>Rutgers Info Widget</h3></a>
 								</div>
 							</div>
 						</div>
@@ -73,7 +73,7 @@
 							<div class="col-md-6 col-xs-12">
 								<div class="work">
 									<img class="img-fluid" id="rock-paper" src="assets/images/overhead.jpeg" alt="Rock Paper Scissors">
-									<h3>Rock Paper Scissors</h3>
+									<a href="#"><h3>Rock Paper Scissors</h3></a>
 								</div>
 							</div>
 						</div>
