--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
 							<div class="col-md-6 col-xs-12">
 								<div class="work">
 									<img class="img-fluid" id="rpg-game" src="assets/images/computer-desk.jpeg" alt="RPG Game">
-									<a href="#"><h3>RPG Game</h3></a>
+									<a class="port-btn" href="#"><h3>RPG Game</h3></a>
 								</div>
 							</div>
 						</div>
@@ -59,13 +59,13 @@
 							<div class="col-md-6 col-xs-12">
 								<div class="work">
 									<img class="img-fluid" id="trivia-game" src="assets/images/create.jpeg" alt="Trivia Game">
-									<a href="#"><h3>Trivia Game</h3></a>
+									<a class="port-btn" href="#"><h3>Trivia Game</h3></a>
 								</div>
 							</div>
 							<div class="col-md-6 col-xs-12">
 								<div class="work">
 									<img class="img-fluid" id="rutgers" src="assets/images/desktop.png" alt="Rutgers Info Widget">
-									<a href="#"><h3>Rutgers Info Widget</h3></a>
+									<a class="port-btn" href="#"><h3>Rutgers Info Widget</h3></a>
 								</div>
 							</div>
 						</div>
@@ -73,7 +73,7 @@
 							<div class="col-md-6 col-xs-12">
 								<div class="work">
 									<img class="img-fluid" id="rock-paper" src="assets/images/overhead.jpeg" alt="Rock Paper Scissors">
-									<a href="#"><h3>Rock Paper Scissors</h3></a>
+									<a class="port-btn" href="#"><h3>Rock Paper Scissors</h3></a>
 								</div>
 							</div>
 						</div>
